// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtSearchBar should render default AtSearchBar 1`] = `
<view
  class="at-search-bar"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-input___tests__2021"
      maxlength="140"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar should render prop -- actionName 1`] = `
<view
  class="at-search-bar"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-input___tests__2021"
      maxlength="140"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -171px;"
  >
    actionName
  </view>
</view>
`;

exports[`AtSearchBar should render prop -- class 1`] = `
<view
  class="test at-search-bar test"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-input___tests__2021"
      maxlength="140"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar should render prop -- disabled 1`] = `
<view
  class="at-search-bar"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      disabled=""
      id="weui-input___tests__2021"
      maxlength="140"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar should render prop -- fixed 1`] = `
<view
  class="at-search-bar at-search-bar--fixed"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-input___tests__2021"
      maxlength="140"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar should render prop -- focus 1`] = `
<view
  class="at-search-bar"
  fucos="true"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-input___tests__2021"
      maxlength="140"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar should render prop -- inputType number 1`] = `
<view
  class="at-search-bar"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-input___tests__2021"
      maxlength="140"
      type="number"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar should render prop -- maxLength 1`] = `
<view
  class="at-search-bar"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-input___tests__2021"
      maxlength="120"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar should render prop -- placeholder 1`] = `
<view
  class="at-search-bar"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        placeholder
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-input___tests__2021"
      maxlength="140"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar should render prop -- showActionButton 1`] = `
<view
  class="at-search-bar"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-input___tests__2021"
      maxlength="140"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 1; margin-right: 0px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar should render prop -- style 1`] = `
<view
  class="at-search-bar"
  style="color: red;"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-input___tests__2021"
      maxlength="140"
      type="text"
    />
    
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 0; margin-right: -59px;"
  >
    搜索
  </view>
</view>
`;

exports[`AtSearchBar should render prop -- value 1`] = `
<view
  class="at-search-bar"
>
  <view
    class="at-search-bar__input-cnt"
  >
    <view
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 0;"
    >
      <text
        class="at-icon at-icon-search"
      />
      <text
        class="at-search-bar__placeholder"
        style="visibility: hidden;"
      >
        搜索
      </text>
    </view>
    <input
      class="at-search-bar__input"
      confirmtype="search"
      id="weui-input___tests__2021"
      maxlength="140"
      type="text"
    />
    <view
      class="at-search-bar__clear"
      style="display: flex;"
    >
      <text
        class="at-icon at-icon-close-circle"
      />
    </view>
  </view>
  <view
    class="at-search-bar__action"
    style="opacity: 1; margin-right: 0px;"
  >
    搜索
  </view>
</view>
`;
